--- a/src/index.html
+++ b/src/index.html
@@ -13,19 +13,21 @@
   <body>
     <header class="header">
       <div class="header__logo-and-nav"><a class="header__logo" href="#"><img src="images/logo.png"></a>
-        <nav class="header__nav"><a class="header__nav-item" href="#">Stories</a><a class="header__nav-item" href="#">Events</a><a class="header__nav-item" href="#">Places</a><a class="header__nav-item" href="#">Boards</a></nav>
-        <input class="header__nav-checkbox" type="checkbox" id="header-burger">
-        <label class="header__nav-label" for="header-burger">
-          <div class="header__nav-burger">
-            <div class="header__nav-burger-layer"></div>
-            <div class="header__nav-burger-layer"></div>
-            <div class="header__nav-burger-layer"></div>
-          </div>
-        </label>
+        <nav class="header__nav">
+          <input class="header__nav-checkbox" type="checkbox" id="header-burger">
+          <label class="header__nav-label" for="header-burger">
+            <div class="header__nav-burger">
+              <div class="header__nav-burger-layer"></div>
+              <div class="header__nav-burger-layer"></div>
+              <div class="header__nav-burger-layer"></div>
+            </div>
+          </label>
+          <div class="header__nav-menu"><a class="header__nav-menu-item" href="#">Stories</a><a class="header__nav-menu-item" href="#">Events</a><a class="header__nav-menu-item" href="#">Places</a><a class="header__nav-menu-item" href="#">Boards</a></div>
+        </nav>
       </div>
       <div class="header__content">
         <div class="header__text"><span class="header__word_blue">Your</span>
-          <h2 class="header-title">Beautiful Escape</h2>
+          <h2 class="header__title">Beautiful Escape</h2>
           <p class="header__qoute">One of the greatest things about the sport of surfing is that you need only three things: your body,<br>a surfboard, and a wave.</p>
         </div>
         <div class="header__slider"><span class="header__slider-first-num">1</span><span class="header__slider-slash">/</span>5</div>
