Improved responsive design for third block

--- a/src/index.html
+++ b/src/index.html
@@ -45,13 +45,13 @@
     </section>
     <section class="article-and-video">
       <div class="article-and-video__content">
-        <div class="media__content-article">
+        <div class="article-and-video__article">
           <div class="article-and-video__image"><img src="images/03-article-and-video/surfer-1.jpg"></div>
           <p class="article-and-video__text">By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.</p>
           <button class="article-and-video__button">Read mor<span class="article-and-video__button-last-letter">e</span></button>
         </div>
-        <div class="article-and-video__content-video">
-          <iframe width="705" height="550" src="https://www.youtube-nocookie.com/embed/TC0JnlNeObI?start=30" frameborder="0" allowfullscreen></iframe>
+        <div class="article-and-video__video">
+          <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/TC0JnlNeObI?start=30" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </section>
