Improved layout of the fourth block. Added responsive to 780px

--- a/src/index.html
+++ b/src/index.html
@@ -58,26 +58,32 @@
     <section class="surfboards-shop"><span class="surfboards-shop__word_blue">Shop</span>
       <h2 class="surfboards-shop__title">Surfboards</h2>
       <div class="surfboards-shop__content">
-        <div class="surfboards-shop__shop-item-photo surfboards-shop__board-chilli"><img src="images/04-surfboards_shop/board-chilli.png"></div>
-        <div class="surfboards-shop__shop-item-specs">
-          <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
-          <p class="surfboards-shop__shop-item-name">Chilli Rare Bird</p>
-          <p class="surfboards-shop__shop-item-price">$ 890</p>
-          <button class="surfboards-shop__shop-item-button">Buy</button>
+        <div class="surfboards-shop__shop-item">
+          <div class="surfboards-shop__shop-item-photo surfboards-shop__board-chilli"><img src="images/04-surfboards_shop/board-chilli.png"></div>
+          <div class="surfboards-shop__shop-item-specs">
+            <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
+            <p class="surfboards-shop__shop-item-name">Chilli Rare Bird</p>
+            <p class="surfboards-shop__shop-item-price">$ 890</p>
+            <button class="surfboards-shop__shop-item-button">Buy</button>
+          </div>
         </div>
-        <div class="surfboards-shop__shop-item-photo surfboards-shop__board-emery"><img src="images/04-surfboards_shop/board-emery.png"></div>
-        <div class="surfboards-shop__shop-item-specs">
-          <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
-          <p class="surfboards-shop__shop-item-name">Emery NEM XF</p>
-          <p class="surfboards-shop__shop-item-price">$ 950</p>
-          <button class="surfboards-shop__shop-item-button">Buy</button>
+        <div class="surfboards-shop__shop-item">
+          <div class="surfboards-shop__shop-item-photo surfboards-shop__board-emery"><img src="images/04-surfboards_shop/board-emery.png"></div>
+          <div class="surfboards-shop__shop-item-specs">
+            <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
+            <p class="surfboards-shop__shop-item-name">Emery NEM XF</p>
+            <p class="surfboards-shop__shop-item-price">$ 950</p>
+            <button class="surfboards-shop__shop-item-button">Buy</button>
+          </div>
         </div>
-        <div class="surfboards-shop__shop-item-photo"><img src="images/04-surfboards_shop/board-agency.png"></div>
-        <div class="surfboards-shop__shop-item-specs">
-          <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
-          <p class="surfboards-shop__shop-item-name">Agency GROM</p>
-          <p class="surfboards-shop__shop-item-price">$ 670</p>
-          <button class="surfboards-shop__shop-item-button">Buy</button>
+        <div class="surfboards-shop__shop-item">
+          <div class="surfboards-shop__shop-item-photo"><img src="images/04-surfboards_shop/board-agency.png"></div>
+          <div class="surfboards-shop__shop-item-specs">
+            <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
+            <p class="surfboards-shop__shop-item-name">Agency GROM</p>
+            <p class="surfboards-shop__shop-item-price">$ 670</p>
+            <button class="surfboards-shop__shop-item-button">Buy</button>
+          </div>
         </div>
       </div>
       <button class="surfboards-shop__button-show-all">
