--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
     <section class="surfboards-shop"><span class="surfboards-shop__word_blue">Shop</span>
       <h2 class="surfboards-shop__title">Surfboards</h2>
       <div class="surfboards-shop__content">
-        <div class="surfboards-shop__shop-item">
+        <div class="surfboards-shop__shop-item board-chili">
           <div class="surfboards-shop__shop-item-photo surfboards-shop__board-chilli"><img src="images/04-surfboards_shop/board-chilli.png"></div>
           <div class="surfboards-shop__shop-item-specs">
             <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
@@ -67,7 +67,7 @@
             <button class="surfboards-shop__shop-item-button">Buy</button>
           </div>
         </div>
-        <div class="surfboards-shop__shop-item">
+        <div class="surfboards-shop__shop-item board-emery">
           <div class="surfboards-shop__shop-item-photo surfboards-shop__board-emery"><img src="images/04-surfboards_shop/board-emery.png"></div>
           <div class="surfboards-shop__shop-item-specs">
             <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
@@ -76,7 +76,7 @@
             <button class="surfboards-shop__shop-item-button">Buy</button>
           </div>
         </div>
-        <div class="surfboards-shop__shop-item">
+        <div class="surfboards-shop__shop-item board-agency">
           <div class="surfboards-shop__shop-item-photo"><img src="images/04-surfboards_shop/board-agency.png"></div>
           <div class="surfboards-shop__shop-item-specs">
             <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
@@ -89,67 +89,9 @@
       <button class="surfboards-shop__button-show-all">
         Show al<span>l</span></button>
     </section>
-    <section class="articles">
-      <div class="articles__content">
-        <article class="articles__surf-training">
-          <div class="articles__surf-training-text"><span class="articles__article-number articles__surf-training-number">01</span>
-            <h2 class="article__titles surf-training-title"><span class="articles__first-title-letter">S</span>urf Training</h2>
-            <p class="articles__article-summary articles__surf-training-summary">
-              By better understanding the various aspects of surfing, By better understanding the various aspects of
-              surfing, you will improve faster and have more fun in the water.
-            </p>
-            <button class="articles__button articles__surf-training-button">
-              Read mor<span class="articles__last-button-letter">e</span></button>
-          </div>
-          <div class="articles__surf-training-image"><img src="images/05-articles/surfer-2.jpg"></div>
-        </article>
-        <article class="articles__point-break">
-          <div class="articles__point-break-text"><span class="articles__article-number articles__point-break-number">02</span>
-            <h2 class="article__titles point-break-title"><span class="articles__first-title-letter">P</span>oint Break</h2>
-            <p class="articles__article-summary articles__point-break-summary">
-              By better understanding the various aspects of By better understanding the various aspects of surfing,
-              By better understanding the various aspects of surfing, you will improve faster and have more
-              fun in the water.
-            </p>
-            <button class="articles__button articles__point-break-button">
-              Read mor<span class="articles__last-button-letter">e</span></button>
-          </div>
-          <div class="articles__point-break-image"><img src="images/05-articles/beach.jpg"></div>
-        </article>
-      </div>
-    </section>
-    <section class="subscribe">
-      <div class="subscribe__content">
-        <h2 class="subscribe__title">Join the Club</h2>
-        <p class="subscribe__text">
-          By better understanding the various aspects of surfing, you will improve faster
-          and have more fun in the water.
-        </p>
-        <form class="subscribe__form" name="registration-form" action="#" method="post">
-          <input class="subscribe__form-input" type="email" name="e-mail" placeholder="Your E-mail">
-          <button class="subscribe__button">
-            <div class="subscribe__button-arrow"></div>
-          </button>
-        </form>
-      </div>
-    </section>
-    <section class="contacts">
-      <div class="contacts__content">
-        <div class="contacts__image"><img src="images/07-contacts/contacts-img.jpg"></div>
-        <div class="contacts__camp-address">
-          <p class="contacts__hat">Our camp</p>
-          <p class="contacts__text">
-            CA 91932,USA Imperial Beach<br>560 Silver Strand Blvd</p>
-          <button class="contacts__button">
-            Get in touc<span class="contacts__button-last-letter">h</span></button>
-        </div>
-      </div>
-    </section>
-    <footer class="footer">
-      <section class="footer__content"><a class="footer__logo" href="#"><img src="images/logo.png"></a>
-        <nav class="footer__menu"><a class="footer__menu-link" href="#">Stories</a><a class="footer__menu-link" href="#">Events</a><a class="footer__menu-link" href="#">Places</a><a class="footer__menu-link" href="#">Boards</a></nav>
-        <div class="footer__social"><a class="footer__social-link social-link-tumblr" href="#"><img src="images/icons/tumblr.png"></a><a class="footer__social-link social-link-twitter" href="#"><img src="images/icons/twitter.png"></a><a class="footer__social-link social-link-vimeo" href="#"><img src="images/icons/vimeo.png"></a></div>
-      </section>
-    </footer>
+    <!--include ../blocks/05-articles/articles-pug/articles-->
+    <!--include ../blocks/06-subscribe/subscribe-pug/subscribe-->
+    <!--include ../blocks/07-contacts/contacts-pug/contacts-->
+    <!--include ../blocks/08-footer/footer-pug/footer-->
   </body>
 </html>
