Refactoring and some fixes

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           <p class="header__qoute">One of the greatest things about the sport of surfing is that you need only three things: your body,<br>a surfboard, and a wave.</p>
         </div>
         <div class="header__slider"><span class="header__slider-first-num">1</span><span class="header__slider-slash">/</span>5</div>
-        <div class="header__image"><img src="images/01-header/header-img.jpg"></div>
+        <div class="header__image"><img src="images/header/header-img.jpg"></div>
         <div class="header__aside">
           <p class="header__decor-text">First surfing magazine</p>
           <div class="header__socials"><a class="header-social-link social-tumblr" href="#"><img src="images/icons/tumblr.png"></a><a class="header-social-link social-twitter" href="#"><img src="images/icons/twitter.png"></a><a class="header-social-link social-vimeo" href="#"><img src="images/icons/vimeo.png"></a></div>
@@ -46,7 +46,7 @@
     <section class="article-and-video">
       <div class="article-and-video__content">
         <div class="article-and-video__article">
-          <div class="article-and-video__image"><img src="images/03-article-and-video/surfer-1.jpg"></div>
+          <div class="article-and-video__image"><img src="images/article-and-video/surfer-1.jpg"></div>
           <p class="article-and-video__text">By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.</p>
           <button class="article-and-video__button">Read mor<span class="article-and-video__button-last-letter">e</span></button>
         </div>
@@ -59,7 +59,7 @@
       <h2 class="surfboards-shop__title">Surfboards</h2>
       <div class="surfboards-shop__content">
         <div class="surfboards-shop__shop-item board-chili">
-          <div class="surfboards-shop__shop-item-photo surfboards-shop__board-chilli"><img src="images/04-surfboards_shop/board-chilli.png"></div>
+          <div class="surfboards-shop__shop-item-photo surfboards-shop__board-chilli"><img src="images/surfboards_shop/board-chilli.png"></div>
           <div class="surfboards-shop__shop-item-specs">
             <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
             <p class="surfboards-shop__shop-item-name">Chilli Rare Bird</p>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="surfboards-shop__shop-item board-emery">
-          <div class="surfboards-shop__shop-item-photo surfboards-shop__board-emery"><img src="images/04-surfboards_shop/board-emery.png"></div>
+          <div class="surfboards-shop__shop-item-photo surfboards-shop__board-emery"><img src="images/surfboards_shop/board-emery.png"></div>
           <div class="surfboards-shop__shop-item-specs">
             <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
             <p class="surfboards-shop__shop-item-name">Emery NEM XF</p>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="surfboards-shop__shop-item board-agency">
-          <div class="surfboards-shop__shop-item-photo"><img src="images/04-surfboards_shop/board-agency.png"></div>
+          <div class="surfboards-shop__shop-item-photo"><img src="images/surfboards_shop/board-agency.png"></div>
           <div class="surfboards-shop__shop-item-specs">
             <h3 class="surfboards-shop__shop-item-title">Funboards</h3>
             <p class="surfboards-shop__shop-item-name">Agency GROM</p>
@@ -89,9 +89,67 @@
       <button class="surfboards-shop__button-show-all">
         Show al<span>l</span></button>
     </section>
-    <!--include ../blocks/05-articles/articles-pug/articles-->
-    <!--include ../blocks/06-subscribe/subscribe-pug/subscribe-->
-    <!--include ../blocks/07-contacts/contacts-pug/contacts-->
-    <!--include ../blocks/08-footer/footer-pug/footer-->
+    <section class="articles">
+      <div class="articles__content">
+        <article class="articles__surf-training">
+          <div class="articles__surf-training-text"><span class="articles__article-number articles__surf-training-number">01</span>
+            <h2 class="article__titles surf-training-title"><span class="articles__first-title-letter">S</span>urf Training</h2>
+            <p class="articles__article-summary articles__surf-training-summary">
+              By better understanding the various aspects of surfing, By better understanding the various aspects of
+              surfing, you will improve faster and have more fun in the water.
+            </p>
+            <button class="articles__button articles__surf-training-button">
+              Read mor<span class="articles__last-button-letter">e</span></button>
+          </div>
+          <div class="articles__surf-training-image"><img src="images/articles/surfer-2.jpg"></div>
+        </article>
+        <article class="articles__point-break">
+          <div class="articles__point-break-text"><span class="articles__article-number articles__point-break-number">02</span>
+            <h2 class="article__titles point-break-title"><span class="articles__first-title-letter">P</span>oint Break</h2>
+            <p class="articles__article-summary articles__point-break-summary">
+              By better understanding the various aspects of By better understanding the various aspects of surfing,
+              By better understanding the various aspects of surfing, you will improve faster and have more
+              fun in the water.
+            </p>
+            <button class="articles__button articles__point-break-button">
+              Read mor<span class="articles__last-button-letter">e</span></button>
+          </div>
+          <div class="articles__point-break-image"><img src="images/articles/beach.jpg"></div>
+        </article>
+      </div>
+    </section>
+    <section class="subscribe">
+      <div class="subscribe__content">
+        <h2 class="subscribe__title">Join the Club</h2>
+        <p class="subscribe__text">
+          By better understanding the various aspects of surfing, you will improve faster
+          and have more fun in the water.
+        </p>
+        <form class="subscribe__form" name="registration-form" action="#" method="post">
+          <input class="subscribe__form-input" type="email" name="e-mail" placeholder="Your E-mail">
+          <button class="subscribe__button">
+            <div class="subscribe__button-arrow"></div>
+          </button>
+        </form>
+      </div>
+    </section>
+    <section class="contacts">
+      <div class="contacts__content">
+        <div class="contacts__image"><img src="images/contacts/contacts-img.jpg"></div>
+        <div class="contacts__camp-address">
+          <p class="contacts__hat">Our camp</p>
+          <p class="contacts__text">
+            CA 91932,USA Imperial Beach<br>560 Silver Strand Blvd</p>
+          <button class="contacts__button">
+            Get in touc<span class="contacts__button-last-letter">h</span></button>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <section class="footer__content"><a class="footer__logo" href="#"><img src="images/logo.png"></a>
+        <nav class="footer__menu"><a class="footer__menu-link" href="#">Stories</a><a class="footer__menu-link" href="#">Events</a><a class="footer__menu-link" href="#">Places</a><a class="footer__menu-link" href="#">Boards</a></nav>
+        <div class="footer__social"><a class="footer__social-link social-link-tumblr" href="#"><img src="images/icons/tumblr.png"></a><a class="footer__social-link social-link-twitter" href="#"><img src="images/icons/twitter.png"></a><a class="footer__social-link social-link-vimeo" href="#"><img src="images/icons/vimeo.png"></a></div>
+      </section>
+    </footer>
   </body>
 </html>
