added responsive to articles-block

--- a/src/index.html
+++ b/src/index.html
@@ -90,33 +90,37 @@
         Show al<span>l</span></button>
     </section>
     <section class="articles">
-      <div class="articles__content">
-        <article class="articles__surf-training">
-          <div class="articles__surf-training-text"><span class="articles__article-number articles__surf-training-number">01</span>
-            <h2 class="article__titles surf-training-title"><span class="articles__first-title-letter">S</span>urf Training</h2>
-            <p class="articles__article-summary articles__surf-training-summary">
-              By better understanding the various aspects of surfing, By better understanding the various aspects of
-              surfing, you will improve faster and have more fun in the water.
-            </p>
-            <button class="articles__button articles__surf-training-button">
-              Read mor<span class="articles__last-button-letter">e</span></button>
-          </div>
-          <div class="articles__surf-training-image"><img src="images/articles/surfer-2.jpg"></div>
-        </article>
-        <article class="articles__point-break">
-          <div class="articles__point-break-text"><span class="articles__article-number articles__point-break-number">02</span>
-            <h2 class="article__titles point-break-title"><span class="articles__first-title-letter">P</span>oint Break</h2>
-            <p class="articles__article-summary articles__point-break-summary">
-              By better understanding the various aspects of By better understanding the various aspects of surfing,
-              By better understanding the various aspects of surfing, you will improve faster and have more
-              fun in the water.
-            </p>
-            <button class="articles__button articles__point-break-button">
-              Read mor<span class="articles__last-button-letter">e</span></button>
-          </div>
-          <div class="articles__point-break-image"><img src="images/articles/beach.jpg"></div>
-        </article>
-      </div>
+      <article class="surf-training">
+        <div class="surf-training__text-area">
+          <p class="text-area__article-number">01</p>
+          <h2 class="text-area__title">Surf training</h2>
+          <p class="text-area__article-text">
+            By better understanding the various aspects of surfing, By better understanding the various aspects of
+            surfing, you will improve faster and have more fun in the water.
+          </p>
+          <button class="text-area__btn">Read more</button>
+        </div>
+        <div class="surf-training__image-area">
+          <div class="surf-training__image"><img src="images/articles/surfer-2.jpg"></div>
+          <p>Surf camps</p>
+        </div>
+      </article>
+      <article class="point-break">
+        <div class="point-break__text-area">
+          <p class="text-area__article-number">02</p>
+          <h2 class="text-area__title">Point Break</h2>
+          <p class="text-area__article-text">
+            By better understanding the various aspects of By better understanding the various aspects of surfing,
+            By better understanding the various aspects of surfing, you will improve faster and have more fun in
+            the water.
+          </p>
+          <button class="text-area__btn">Read more</button>
+        </div>
+        <div class="point-break__image-area">
+          <div class="point-break__image"><img src="images/articles/beach.jpg"></div>
+          <p>Surf camps</p>
+        </div>
+      </article>
     </section>
     <section class="subscribe">
       <div class="subscribe__content">
